--- a/TripLog/Base.lproj/Main.storyboard
+++ b/TripLog/Base.lproj/Main.storyboard
@@ -11,7 +11,7 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Journal Entries-->
+        <!--Journal Entries View Controller-->
         <scene sceneID="hNz-n2-bh7">
             <objects>
                 <viewController id="9pv-A4-QxB" customClass="JournalEntriesViewController" customModule="TripLog" customModuleProvider="target" sceneMemberID="viewController">
@@ -23,19 +23,19 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="104" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="K0N-Um-D7r">
-                                <rect key="frame" x="0.0" y="20" width="375" height="598"/>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="106" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="K0N-Um-D7r">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="554"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="JournalEntriesTableViewCell" rowHeight="104" id="ogn-4c-QqH" customClass="JournalEntriesTableViewCell" customModule="TripLog" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="28" width="375" height="104"/>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="JournalEntriesTableViewCell" rowHeight="107" id="ogn-4c-QqH" customClass="JournalEntriesTableViewCell" customModule="TripLog" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="28" width="375" height="107"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="ogn-4c-QqH" id="2nU-j6-Ao5">
-                                            <rect key="frame" x="0.0" y="0.0" width="375" height="103.5"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="106.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <stackView opaque="NO" contentMode="scaleToFill" distribution="fillProportionally" alignment="top" translatesAutoresizingMaskIntoConstraints="NO" id="e5o-fY-Vtq">
-                                                    <rect key="frame" x="10" y="18" width="30" height="67.5"/>
+                                                    <rect key="frame" x="10" y="18" width="30" height="70.5"/>
                                                     <subviews>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0Zs-ZW-iC0">
                                                             <rect key="frame" x="0.0" y="0.0" width="15" height="20.5"/>
@@ -92,20 +92,130 @@
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstItem="4ug-Mw-9AY" firstAttribute="top" secondItem="K0N-Um-D7r" secondAttribute="bottom" id="P8a-ow-2lJ"/>
-                            <constraint firstItem="K0N-Um-D7r" firstAttribute="top" secondItem="Ia1-K6-d13" secondAttribute="bottom" id="SJW-so-v4h"/>
+                            <constraint firstItem="4ug-Mw-9AY" firstAttribute="top" secondItem="K0N-Um-D7r" secondAttribute="bottom" constant="64" id="P8a-ow-2lJ"/>
+                            <constraint firstItem="K0N-Um-D7r" firstAttribute="top" secondItem="Ia1-K6-d13" secondAttribute="bottom" constant="-64" id="SJW-so-v4h"/>
                             <constraint firstAttribute="trailing" secondItem="K0N-Um-D7r" secondAttribute="trailing" id="kbB-ro-8VG"/>
                             <constraint firstItem="K0N-Um-D7r" firstAttribute="leading" secondItem="tsR-hK-woN" secondAttribute="leading" id="ngo-UR-OCe"/>
                         </constraints>
                     </view>
-                    <tabBarItem key="tabBarItem" title="Journal Entries" image="first" id="acW-dT-cKf"/>
+                    <navigationItem key="navigationItem" id="YcF-mY-hIn">
+                        <barButtonItem key="rightBarButtonItem" title="New Journal Entry" id="G8D-Dr-3ze">
+                            <connections>
+                                <segue destination="0zj-l8-yQj" kind="show" id="qu8-hy-h17"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
                     <connections>
                         <outlet property="journalEntriesTableView" destination="K0N-Um-D7r" id="iJ5-WT-wfE"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="W5J-7L-Pyd" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="749.60000000000002" y="-320.68965517241384"/>
+            <point key="canvasLocation" x="1466" y="-321"/>
+        </scene>
+        <!--New Journal Entry-->
+        <scene sceneID="dEq-jG-1fA">
+            <objects>
+                <viewController id="Pgc-aW-7tY" customClass="NewJournalViewController" customModule="TripLog" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="D8R-5M-Zfe"/>
+                        <viewControllerLayoutGuide type="bottom" id="TcL-QC-p7Y"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="7Iu-gR-xsc">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="ytS-jf-ctG">
+                                <rect key="frame" x="10" y="84" width="355" height="30"/>
+                                <subviews>
+                                    <stackView opaque="NO" contentMode="scaleToFill" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="9pX-NR-nCB">
+                                        <rect key="frame" x="0.0" y="0.0" width="172.5" height="30"/>
+                                        <subviews>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Date" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Xle-og-Bma">
+                                                <rect key="frame" x="0.0" y="0.0" width="36" height="30"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="width" constant="36" id="Tq1-vi-bVK"/>
+                                                </constraints>
+                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Gb8-eP-pNn">
+                                                <rect key="frame" x="46" y="0.0" width="126.5" height="30"/>
+                                                <nil key="textColor"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                <textInputTraits key="textInputTraits"/>
+                                            </textField>
+                                        </subviews>
+                                    </stackView>
+                                    <stackView opaque="NO" contentMode="scaleToFill" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="BIH-eP-zaJ">
+                                        <rect key="frame" x="182.5" y="0.0" width="172.5" height="30"/>
+                                        <subviews>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Location" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="U0D-dE-EWe">
+                                                <rect key="frame" x="0.0" y="0.0" width="65.5" height="30"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="width" constant="65.5" id="45N-pp-h8t"/>
+                                                </constraints>
+                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="eXj-xz-4mB">
+                                                <rect key="frame" x="75.5" y="0.0" width="97" height="30"/>
+                                                <nil key="textColor"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                <textInputTraits key="textInputTraits"/>
+                                            </textField>
+                                        </subviews>
+                                    </stackView>
+                                </subviews>
+                            </stackView>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="QgO-Sw-gyA">
+                                <rect key="frame" x="10" y="124" width="355" height="489"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                            </textView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="TcL-QC-p7Y" firstAttribute="top" secondItem="QgO-Sw-gyA" secondAttribute="bottom" constant="10" id="13i-v5-ciA"/>
+                            <constraint firstItem="QgO-Sw-gyA" firstAttribute="top" secondItem="ytS-jf-ctG" secondAttribute="bottom" constant="10" id="2Bz-JZ-hY2"/>
+                            <constraint firstItem="ytS-jf-ctG" firstAttribute="top" secondItem="D8R-5M-Zfe" secondAttribute="bottom" constant="20" id="EI7-OH-Keg"/>
+                            <constraint firstAttribute="trailing" secondItem="ytS-jf-ctG" secondAttribute="trailing" constant="10" id="hF0-dt-KQd"/>
+                            <constraint firstItem="ytS-jf-ctG" firstAttribute="leading" secondItem="7Iu-gR-xsc" secondAttribute="leading" constant="10" id="qPO-lu-KUu"/>
+                            <constraint firstAttribute="trailing" secondItem="QgO-Sw-gyA" secondAttribute="trailing" constant="10" id="u2O-es-2qE"/>
+                            <constraint firstItem="QgO-Sw-gyA" firstAttribute="leading" secondItem="7Iu-gR-xsc" secondAttribute="leading" constant="10" id="uzU-7e-q1Y"/>
+                        </constraints>
+                    </view>
+                    <toolbarItems>
+                        <barButtonItem title="Camera" id="Rlq-18-kgE">
+                            <connections>
+                                <action selector="importImage:" destination="Pgc-aW-7tY" id="a6n-nv-kHj"/>
+                            </connections>
+                        </barButtonItem>
+                        <barButtonItem style="plain" systemItem="flexibleSpace" id="fhi-l1-sJv"/>
+                        <barButtonItem title="Upload a photo/video" id="EyR-P9-gZa">
+                            <connections>
+                                <action selector="importImage:" destination="Pgc-aW-7tY" id="4eT-DR-pSe"/>
+                            </connections>
+                        </barButtonItem>
+                    </toolbarItems>
+                    <navigationItem key="navigationItem" title="New Journal Entry" id="4Yx-rn-t9r">
+                        <barButtonItem key="backBarButtonItem" title="Journal Entries" id="bYf-xA-0qk"/>
+                        <barButtonItem key="leftBarButtonItem" systemItem="cancel" id="5f6-41-ThM"/>
+                        <barButtonItem key="rightBarButtonItem" systemItem="save" id="3DH-aT-dw9"/>
+                    </navigationItem>
+                    <simulatedToolbarMetrics key="simulatedBottomBarMetrics"/>
+                    <connections>
+                        <outlet property="cameraButton" destination="Rlq-18-kgE" id="fBS-dy-6hI"/>
+                        <outlet property="journalTextView" destination="QgO-Sw-gyA" id="Ve5-P1-MnY"/>
+                        <outlet property="uploadButton" destination="EyR-P9-gZa" id="nvN-Kg-7kf"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="wBJ-wG-Of1" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2909.5999999999999" y="-322.48875562218893"/>
         </scene>
         <!--Trips-->
         <scene sceneID="wg7-f3-ORb">
@@ -158,13 +268,54 @@
                         <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="0.0" colorSpace="custom" customColorSpace="sRGB"/>
                     </tabBar>
                     <connections>
-                        <segue destination="9pv-A4-QxB" kind="relationship" relationship="viewControllers" id="u7Y-xg-7CH"/>
+                        <segue destination="weU-06-GHG" kind="relationship" relationship="viewControllers" id="u7Y-xg-7CH"/>
                         <segue destination="8rJ-Kc-sve" kind="relationship" relationship="viewControllers" id="lzU-1b-eKA"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="HuB-VB-40B" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="0.0" y="0.0"/>
+        </scene>
+        <!--Journal Entries-->
+        <scene sceneID="UFQ-qb-iYX">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="weU-06-GHG" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Journal Entries" image="first" id="acW-dT-cKf"/>
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="sXf-de-ijy">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="9pv-A4-QxB" kind="relationship" relationship="rootViewController" id="aOB-Up-r2A"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Z53-zb-wLw" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="749.60000000000002" y="-320.68965517241384"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="VEH-9T-1LM">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" toolbarHidden="NO" id="0zj-l8-yQj" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="cFD-Nw-HSb">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <toolbar key="toolbar" opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="72c-ym-FVt">
+                        <rect key="frame" x="0.0" y="623" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </toolbar>
+                    <connections>
+                        <segue destination="Pgc-aW-7tY" kind="relationship" relationship="rootViewController" id="m0b-dl-H8A"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="XAO-hV-NaJ" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2184.8000000000002" y="-322.48875562218893"/>
         </scene>
     </scenes>
     <resources>
